<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="209dp"
        android:layout_height="57dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/settings_amp_more"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="24sp"/>

    <ScrollView
        android:id="@+id/scrollViewHere"
        android:layout_below="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="110dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/devs"
                android:layout_width="198dp"
                android:layout_height="60dp"
                android:elevation="30dp"
                android:fontFamily="@font/productsans"
                android:text="@string/developers"
                android:textColor="@color/black"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/myacc"
                android:layout_width="198dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:elevation="30dp"
                android:fontFamily="@font/productsans"
                android:text="@string/my_account"
                android:textColor="@color/black"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/privacy"
                android:layout_width="198dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:elevation="30dp"
                android:fontFamily="@font/productsans"
                android:text="@string/privacy_info"
                android:textColor="@color/black"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/my_name"
                android:layout_width="198dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:elevation="30dp"
                android:fontFamily="@font/productsans"
                android:text="@string/saved_file_name"
                android:textColor="@color/black"
                app:backgroundTint="@color/green" />

            <Button
                android:id="@+id/theme"
                android:layout_width="198dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:elevation="30dp"
                android:fontFamily="@font/productsans"
                android:text="@string/theme"
                android:textColor="@color/black"
                app:backgroundTint="@color/green" />

            <TextView
                android:id="@+id/unique_id_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/productsans"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sign_up_anim"
        android:layout_width="88dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:lottie_autoPlay="false"
        app:lottie_fileName="sign_up_loader.json"
        app:lottie_loop="true" />

    <android.widget.Button
        android:id="@+id/share"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_below="@+id/scrollViewHere"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/share"/>
</RelativeLayout>