<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_name_bg"
    tools:context=".MyName">

    <TextView
        android:id="@+id/name_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/productsans"
        android:text="@string/type_your_name_here"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/my_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <EditText
        android:id="@+id/my_name_input"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="348dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/productsans"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textColorHint="@color/fb_blue"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_placeholder"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/more_info_on_name"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="42dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/light"
        android:text="@string/more_info"
        android:textColor="@color/dot_dark_screen3"
        app:layout_constraintBottom_toTopOf="@+id/my_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_placeholder" />
</androidx.constraintlayout.widget.ConstraintLayout>