<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#FDBFBF"
            app:cardCornerRadius="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/personHolder"
                    android:layout_centerHorizontal="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_person_black_24dp"/>
                <TextView
                    android:id="@+id/loggedInGuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/personHolder"
                    android:textAlignment="center"
                    android:text="@string/your_name"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/savedName"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/profile"
            android:backgroundTint="#E6CFF4"
            app:cardCornerRadius="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/savedNameHolder"
                    android:layout_centerHorizontal="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_filter_vintage_black_24dp"/>
                <TextView
                    android:id="@+id/savingName"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/savedNameHolder"
                    android:text="@string/file_name"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/developers"
            android:layout_width="110dp"
            android:layout_height="330dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/profile"
            android:backgroundTint="#C3C3C3"
            app:cardCornerRadius="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/developerHolder"
                    android:layout_centerInParent="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/code"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/theme"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_radio_button_unchecked_black_24dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:elevation="30dp"
                android:layout_below="@+id/savedName" />
        <com.google.android.material.button.MaterialButton
                android:id="@+id/privacyPolicy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/privacy_lock"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/theme"
                android:elevation="30dp"
                android:layout_below="@+id/savedName" />
            <Button
                android:id="@+id/tnWeb"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/computer"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/theme"
                android:elevation="30dp"
                android:layout_below="@+id/privacyPolicy" />
        <com.google.android.material.button.MaterialButton
                android:id="@+id/shareApp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_share_black_24dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:elevation="30dp"
                android:layout_below="@+id/theme"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/dynamicHolder"
                android:layout_width="310dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/shareApp"
                android:backgroundTint="#F8DCDC"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/BulletinHolder"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_new_releases_black_24dp"/>
                    <TextView
                        android:id="@+id/dynamicText"
                        android:layout_width="wrap_content"
                        android:scrollbars="vertical"
                        android:linksClickable="true"
                        android:autoLink="web"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/BulletinHolder"
                        android:textAlignment="center"
                        android:text="@string/app_name"
                        android:textSize="18sp"
                        android:layout_marginBottom="30dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/idBtnDelete"
                android:layout_width="110dp"
                android:layout_height="140dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="50dp"
                android:layout_below="@+id/developers"
                android:backgroundTint="#ABD89F"
                android:layout_toEndOf="@+id/tnWeb"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieFileDelete"
                        android:layout_centerInParent="true"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="15dp"
                        app:lottie_fileName="delete.json"
                        app:lottie_loop="false"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>